--- a/Blogizm.WebUI/Areas/Admin/Views/AdminCategory/Index.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/AdminCategory/Index.cshtml
@@ -3,8 +3,20 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
     int count = 0;
+    var mesaj = TempData["mesaj"];
+    var baslik = TempData["baslik"];
 }
 
+@if(TempData["mesaj"]!=null){
+    <script>
+         Swal.fire({
+             title:'@Html.Raw(baslik)',
+             icon:'success',
+             text:'@Html.Raw(mesaj)',
+             confirmButtonText:'Tamam'
+         })
+    </script>
+}
 <div class="page-content">
     <div class="container-fluid">
 
@@ -12,12 +24,12 @@
         <div class="row">
             <div class="col-12">
                 <div class="page-title-box d-flex align-items-center justify-content-between">
-                    <h4 class="mb-0 font-size-18">Dashboard</h4>
+                    <h4 class="mb-0 font-size-18">Kategori Listesi</h4>
 
                     <div class="page-title-right">
                         <ol class="breadcrumb m-0">
-                            <li class="breadcrumb-item"><a href="javascript: void(0);">Xacton</a></li>
-                            <li class="breadcrumb-item active">Dashboard</li>
+                            <li class="breadcrumb-item"><a href="javascript: void(0);">Blogizm</a></li>
+                            <li class="breadcrumb-item active">Kategoriler</li>
                         </ol>
                     </div>
 
@@ -74,6 +86,7 @@
       
         </div>
 
+        <a href="/Admin/AdminCategory/CreateCategory" class="btn btn-outline-primary">Yeni Kategori Girişi</a>
     </div> 
 </div>
 
