--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeadComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeadComponentPartial/Default.cshtml
@@ -14,4 +14,6 @@
     <link href="/Admin/vertical/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
     <link href="/Admin/vertical/assets/css/theme.min.css" rel="stylesheet" type="text/css" />
 
+    <!--SweetAlert-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
