--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeaderComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeaderComponentPartial/Default.cshtml
@@ -17,22 +17,22 @@
 
                     <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        Application
+                        Kategoriler
                     </a>
 
                     <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        Software
+                        Bloglar
                     </a>
 
                     <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        EMS System
+                        Yazarlar
                     </a>
 
                     <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        CRM App
+                    <a href="/Default/Index" class="dropdown-item notify-item">
+                        Siteye Dön
                     </a>
                 </div>
             </div>
@@ -68,40 +68,40 @@
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="" src="assets/images/flags/us.jpg" alt="Header Language" height="16">
-                    <span class="d-none d-sm-inline-block ml-1">English</span>
+                    <img class="" src="/Admin/vertical/assets/images/flags/us.jpg" alt="Header Language" height="16">
+                    <span class="d-none d-sm-inline-block ml-1">İngilizce</span>
                     <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
 
                     <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="assets/images/flags/spain.jpg" alt="user-image" class="mr-1" height="12">
-                        <span class="align-middle">Spanish</span>
+                        <img src="/Admin/vertical/assets/images/flags/spain.jpg" alt="user-image" class="mr-1" height="12">
+                        <span class="align-middle">İspanyolca</span>
                     </a>
 
                     <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="assets/images/flags/germany.jpg" alt="user-image" class="mr-1" height="12">
-                        <span class="align-middle">German</span>
+                        <img src="/Admin/vertical/assets/images/flags/germany.jpg" alt="user-image" class="mr-1" height="12">
+                        <span class="align-middle">Almanca</span>
                     </a>
 
                     <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="assets/images/flags/italy.jpg" alt="user-image" class="mr-1" height="12">
-                        <span class="align-middle">Italian</span>
+                        <img src="/Admin/vertical/assets/images/flags/italy.jpg" alt="user-image" class="mr-1" height="12">
+                        <span class="align-middle">İtalyanca</span>
                     </a>
 
                     <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="assets/images/flags/russia.jpg" alt="user-image" class="mr-1" height="12">
-                        <span class="align-middle">Russian</span>
+                        <img src="/Admin/vertical/assets/images/flags/turkey.png" alt="user-image" class="mr-1" height="12">
+                        <span class="align-middle">Türkçe</span>
                     </a>
                 </div>
             </div>
 
             <div class="dropdown d-inline-block">
-                <button type="button" class="btn header-item noti-icon waves-effect"
+                <button type="button" class="btn header-item noti-icon"
                         id="page-header-notifications-dropdown" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                     <i class="mdi mdi-bell"></i>
@@ -112,10 +112,10 @@
                     <div class="p-3">
                         <div class="row align-items-center">
                             <div class="col">
-                                <h6 class="m-0"> Notifications </h6>
+                                <h6 class="m-0"> Bildirimler </h6>
                             </div>
                             <div class="col-auto">
-                                <a href="#!" class="small"> View All</a>
+                                <a href="#!" class="small">Tümünü Gör</a>
                             </div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
             <div class="dropdown d-inline-block ml-2">
                 <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-3.jpg"
+                    <img class="rounded-circle header-profile-user" src="/Admin/vertical/assets/images/users/avatar-3.jpg"
                          alt="Header Avatar">
                     <span class="d-none d-sm-inline-block ml-1">Jamie D.</span>
                     <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
@@ -185,29 +185,29 @@
                 <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item d-flex align-items-center justify-content-between"
                        href="javascript:void(0)">
-                        <span>Inbox</span>
+                        <span>Gelen Kutusu</span>
                         <span>
                             <span class="badge badge-pill badge-info">3</span>
                         </span>
                     </a>
                     <a class="dropdown-item d-flex align-items-center justify-content-between"
                        href="javascript:void(0)">
-                        <span>Profile</span>
+                        <span>Hesabım</span>
                         <span>
                             <span class="badge badge-pill badge-warning">1</span>
                         </span>
                     </a>
                     <a class="dropdown-item d-flex align-items-center justify-content-between"
                        href="javascript:void(0)">
-                        Settings
+                        Ayarlar
                     </a>
                     <a class="dropdown-item d-flex align-items-center justify-content-between"
                        href="javascript:void(0)">
-                        <span>Lock Account</span>
+                        <span>Hesabı Kilitle</span>
                     </a>
                     <a class="dropdown-item d-flex align-items-center justify-content-between"
                        href="javascript:void(0)">
-                        <span>Log Out</span>
+                        <span>Çıkış Yap</span>
                     </a>
                 </div>
             </div>
