--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -6,7 +6,7 @@
             <a href="index.html" class="logo">
                 <i class="mdi mdi-alpha-x-circle"></i>
                 <span>
-                    Xacton
+                   BLOGİZM
                 </span>
             </a>
         </div>
