--- a/Blogizm.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,4 +4,6 @@
 @using Blogizm.Dtos.AuthorDtos
 @using Blogizm.Dtos.AboutDtos
 @using Blogizm.Dtos.AboutBannerDtos
+@using Blogizm.Dtos.ClientDtos
+@using Blogizm.Dtos.ContactAddressDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
