--- a/Blogizm.WebUI/Areas/Admin/Views/AdminAbout/UpdateAbout.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/AdminAbout/UpdateAbout.cshtml
@@ -18,14 +18,14 @@
                             <input type="hidden" asp-for="AboutId" />
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Hakkımızda  Başlık</label>
-                                <input type="text" autocomplete="off" class="form-control" asp-for="Title" id="exampleInputPassword1">
+                                <input type="text" autocomplete="off" value="@Model.Title" class="form-control" asp-for="Title" id="exampleInputPassword1">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Hakkımızda  Açıklama</label>
-                                <input type="text" autocomplete="off" class="form-control" asp-for="Description" id="exampleInputPassword1">
+                                <input type="text" autocomplete="off" value="@Model.Description" class="form-control" asp-for="Description" id="exampleInputPassword1">
                             </div>
 
-                            <button type="submit" class="btn btn-primary waves-effect waves-light">Ekle</button>
+                            <button type="submit" class="btn btn-primary waves-effect waves-light">Kaydet</button>
                         </form>
 
                     </div> <!-- end card-body-->
