--- a/Blogizm.WebUI/Areas/Admin/Views/AdminAboutBanner/CreateAboutBanner.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/AdminAboutBanner/CreateAboutBanner.cshtml
@@ -1,8 +1,58 @@
-﻿
+﻿@model CreateAboutBannerDto
 @{
     ViewData["Title"] = "CreateAboutBanner";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h1>CreateAboutBanner</h1>
+<div class="page-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+
+                        <h4 class="card-title">Hakkımızda Banner  Ekleme İşlemi</h4>
+                        <p class="card-subtitle mb-4">İlgili parametreleri doldurup Hakkımızda Banner  ekleme işlemini gerçekleştirebilirsiniz.</p>
+
+                        <form method="post">
+
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Hakkımızda Banner Başlık 1</label>
+                                <input type="text" autocomplete="off" class="form-control" asp-for="BannerTitle1" id="exampleInputPassword1">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Hakkımızda Banner Açıklama 1</label>
+                                <input type="text" autocomplete="off" class="form-control" asp-for="BannerDesc1" id="exampleInputPassword1">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Hakkımızda Banner Resim 1</label>
+                                <input type="text" autocomplete="off" class="form-control" asp-for="BannerImg1" id="exampleInputPassword1">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Hakkımızda Banner Başlık 2</label>
+                                <input type="text" autocomplete="off" class="form-control" asp-for="BannerTitle2" id="exampleInputPassword1">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Hakkımızda Banner Açıklama 2</label>
+                                <input type="text" autocomplete="off" class="form-control" asp-for="BannerDesc2" id="exampleInputPassword1">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Hakkımızda Banner Resim 2</label>
+                                <input type="text" autocomplete="off" class="form-control" asp-for="BannerImg2" id="exampleInputPassword1">
+                            </div>
+
+                      
+                            <button type="submit" class="btn btn-primary waves-effect waves-light">Ekle</button>
+                        </form>
+
+                    </div> <!-- end card-body-->
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+</div>
 
