--- a/Blogizm.WebUI/Areas/Admin/Views/AdminCategory/UpdateCategory.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/AdminCategory/UpdateCategory.cshtml
@@ -21,7 +21,7 @@
                                 <input type="text" value="@Model.Name" autocomplete="off" class="form-control" asp-for="Name" id="exampleInputPassword1">
                             </div>
 
-                            <button type="submit" class="btn btn-primary waves-effect waves-light">Ekle</button>
+                            <button type="submit" class="btn btn-primary waves-effect waves-light">Kaydet</button>
                         </form>
 
                     </div> <!-- end card-body-->
