--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeadComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeadComponentPartial/Default.cshtml
@@ -16,4 +16,6 @@
 
     <!--SweetAlert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/5a2907cab4.js" crossorigin="anonymous"></script>
 </head>
