--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -22,7 +22,26 @@
                         <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Dashboard</span>
                     </a>
                 </li>
-
+                <li>
+                    <a href="/Admin/AdminAbout/Index" class="waves-effect">
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Hakkımızda</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Admin/AdminAboutBanner/Index" class="waves-effect">
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Hakkımızda Banner</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Admin/AdminClient/Index" class="waves-effect">
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Referanslar</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Admin/AdminContactAddress/Index" class="waves-effect">
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>İletişim Adresleri</span>
+                    </a>
+                </li>
                 <li>
                     <a href="index.html" class="waves-effect">
                         <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Bloglar</span>
