Contact Message and Social Media Dto Imports

--- a/Blogizm.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,4 +6,6 @@
 @using Blogizm.Dtos.AboutBannerDtos
 @using Blogizm.Dtos.ClientDtos
 @using Blogizm.Dtos.ContactAddressDtos
+@using Blogizm.Dtos.ContactMessageDtos
+@using Blogizm.Dtos.SocialMediaDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
