--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -19,49 +19,59 @@
 
                 <li>
                     <a href="index.html" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Dashboard</span>
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right"></span><span>Dashboard</span>
                     </a>
                 </li>
                 <li>
                     <a href="/Admin/AdminAbout/Index" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Hakkımızda</span>
+                        <i class="fa-solid fa-address-card"></i><span class="badge badge-pill badge-primary float-right"></span><span>Hakkımızda</span>
                     </a>
                 </li>
                 <li>
                     <a href="/Admin/AdminAboutBanner/Index" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Hakkımızda Banner</span>
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right"></span><span>Hakkımızda Banner</span>
                     </a>
                 </li>
                 <li>
                     <a href="/Admin/AdminClient/Index" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Referanslar</span>
+                        <i class="fa-solid fa-person"></i><span class="badge badge-pill badge-primary float-right"></span><span>Referanslar</span>
                     </a>
                 </li>
                 <li>
                     <a href="/Admin/AdminContactAddress/Index" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>İletişim Adresleri</span>
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right"></span><span>İletişim Adresleri</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Admin/AdminContactMessage/Index" class="waves-effect">
+                        <i class="fa-regular fa-message"></i><span class="badge badge-pill badge-primary float-right"></span><span>Gelen Mesajlar</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Admin/AdminSocialMedia/Index" class="waves-effect">
+                        <i class="fa-solid fa-hashtag"></i><span class="badge badge-pill badge-primary float-right"></span><span>Sosyal Medya</span>
                     </a>
                 </li>
                 <li>
                     <a href="index.html" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Bloglar</span>
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right"></span><span>Bloglar</span>
                     </a>
                 </li>
                 <li>
                     <a href="/Admin/AdminAuthor/Index" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Yazarlar</span>
+                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right"></span><span>Yazarlar</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="/Admin/AdminCategory/Index" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Kategoriler</span>
+                        <i class="fa-solid fa-list"></i><span class="badge badge-pill badge-primary float-right"></span><span>Kategoriler</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="index.html" class="waves-effect">
-                        <i class="feather-airplay"></i><span class="badge badge-pill badge-primary float-right">7</span><span>Blog Kategoriler</span>
+                        <i class="fa-solid fa-list"></i></i><span class="badge badge-pill badge-primary float-right"></span><span>Blog Kategoriler</span>
                     </a>
                 </li>
             </ul>
