--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -70,8 +70,13 @@
                 </li>
 
                 <li>
-                    <a href="index.html" class="waves-effect">
-                        <i class="fa-solid fa-list"></i></i><span class="badge badge-pill badge-primary float-right"></span><span>Blog Kategoriler</span>
+                    <a href="/Admin/AdminBlogCategory/Index" class="waves-effect">
+                        <i class="fa-solid fa-list"></i><span class="badge badge-pill badge-primary float-right"></span><span>Blog Kategoriler</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Admin/AdminBlog/Index" class="waves-effect">
+                        <i class="fa-solid fa-list"></i><span class="badge badge-pill badge-primary float-right"></span><span>Bloglar</span>
                     </a>
                 </li>
             </ul>
