--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeadComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeadComponentPartial/Default.cshtml
@@ -18,4 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5a2907cab4.js" crossorigin="anonymous"></script>
+    <!--Jquery CDN-->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
