Blog Category and Blog Dtos Import

--- a/Blogizm.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -8,4 +8,6 @@
 @using Blogizm.Dtos.ContactAddressDtos
 @using Blogizm.Dtos.ContactMessageDtos
 @using Blogizm.Dtos.SocialMediaDtos
+@using Blogizm.Dtos.BlogCategoryDtos
+@using Blogizm.Dtos.BlogDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
