--- a/Blogizm.WebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
@@ -11,6 +11,7 @@
 
 						<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
 							<li class="active"><a href="/Default/Index">Ana Sayfa</a></li>
+							<li><a href="/About/Index">Hakkımızda</a></li>
 							<li class="has-children">
 								<a href="category.html">Kategoriler</a>
 								<ul class="dropdown">
