--- a/Blogizm.WebUI/Views/Shared/Components/_UILayoutHeadComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_UILayoutHeadComponentPartial/Default.cshtml
@@ -23,7 +23,12 @@
 	<link rel="stylesheet" href="/untree.co-blogy/css/style.css">
 
 	<link rel="stylesheet" href="/untree.co-blogy/css/flatpickr.min.css">
-
+	<!--SweetAlert-->
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<!--Font Awesome-->
+	<script src="https://kit.fontawesome.com/5a2907cab4.js" crossorigin="anonymous"></script>
+	<!--Jquery CDN-->
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 	<title>@TempData["Title"]</title>
 </head>
