--- a/Blogizm.WebUI/Views/Default/Index.cshtml
+++ b/Blogizm.WebUI/Views/Default/Index.cshtml
@@ -7,6 +7,7 @@
 <section class="section bg-light">
 	<div class="container">
 		<div class="row align-items-stretch retro-layout">
+			<h3>Öne Çıkan Haberler</h3>
 			<div class="col-md-4">
 				<a href="single.html" class="h-entry mb-30 v-height gradient">
 
@@ -66,77 +67,70 @@
 	<div class="container">
 		<div class="row mb-4">
 			<div class="col-sm-6">
-				<h2 class="posts-entry-title">Business</h2>
+				<h2 class="posts-entry-title">Dizi</h2>
 			</div>
-			<div class="col-sm-6 text-sm-end"><a href="category.html" class="read-more">View All</a></div>
+			<div class="col-sm-6 text-sm-end">
+				<a href="category.html" class="read-more">View All</a>
+			</div>
 		</div>
 		<div class="row g-3">
-			<div class="col-md-6">
-				<div class="row g-3">
-					<div class="col-md-6">
-						<div class="blog-entry">
-							<a href="single.html" class="img-link">
-								<img src="/untree.co-blogy/images/img_1_sq.jpg" alt="Image" class="img-fluid">
-							</a>
-							<span class="date">Apr. 14th, 2022</span>
-							<h2><a href="single.html">Thought you loved Python? Wait until you meet Rust</a></h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-							<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="blog-entry">
-							<a href="single.html" class="img-link">
-								<img src="/untree.co-blogy/images/img_2_sq.jpg" alt="Image" class="img-fluid">
-							</a>
-							<span class="date">Apr. 14th, 2022</span>
-							<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-							<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
-						</div>
-					</div>
+			<!-- Görselli Blog 1 -->
+			<div class="col-md-4">
+				<div class="blog-entry">
+					<a href="single.html" class="img-link">
+						<img src="/untree.co-blogy/images/img_1_sq.jpg" alt="Image" class="img-fluid">
+					</a>
+					<span class="date">Apr. 14th, 2022</span>
+					<h2><a href="single.html">Thought you loved Python? Wait until you meet Rust</a></h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
+					<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
 				</div>
 			</div>
-			<div class="col-md-6">
-				<ul class="list-unstyled blog-entry-sm">
-					<li>
-						<span class="date">Apr. 14th, 2022</span>
-						<h3><a href="single.html">Don’t assume your user data in the cloud is safe</a></h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</li>
-
-					<li>
-						<span class="date">Apr. 14th, 2022</span>
-						<h3><a href="single.html">Meta unveils fees on metaverse sales</a></h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</li>
-
-					<li>
-						<span class="date">Apr. 14th, 2022</span>
-						<h3><a href="single.html">UK sees highest inflation in 30 years</a></h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</li>
-				</ul>
+			<!-- Görselli Blog 2 -->
+			<div class="col-md-4">
+				<div class="blog-entry">
+					<a href="single.html" class="img-link">
+						<img src="/untree.co-blogy/images/img_2_sq.jpg" alt="Image" class="img-fluid">
+					</a>
+					<span class="date">Apr. 14th, 2022</span>
+					<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
+					<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
+				</div>
+			</div>
+			<!-- Görselli Blog 3 -->
+			<div class="col-md-4">
+				<div class="blog-entry">
+					<a href="single.html" class="img-link">
+						<img src="/untree.co-blogy/images/img_2_sq.jpg" alt="Image" class="img-fluid">
+					</a>
+					<span class="date">Apr. 14th, 2022</span>
+					<h2><a href="single.html">UK sees highest inflation in 30 years</a></h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
+					<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
 </section>
+
 
 <section class="section posts-entry">
 	<div class="container">
 		<div class="row mb-4">
 			<div class="col-sm-6">
-				<h2 class="posts-entry-title">Culture</h2>
+				<h2 class="posts-entry-title">Oyun</h2>
 			</div>
-			<div class="col-sm-6 text-sm-end"><a href="category.html" class="read-more">View All</a></div>
+			<div class="col-sm-6 text-sm-end">
+				<a href="category.html" class="read-more">View All</a>
+			</div>
 		</div>
 		<div class="row g-3">
-			<div class="col-md-9 order-md-2">
+			<!-- Görselli Bloglar -->
+			<div class="col-md-12 order-md-2">
 				<div class="row g-3">
-					<div class="col-md-6">
+					<!-- Görselli Blog 1 -->
+					<div class="col-md-4">
 						<div class="blog-entry">
 							<a href="single.html" class="img-link">
 								<img src="/untree.co-blogy/images/img_1_sq.jpg" alt="Image" class="img-fluid">
@@ -147,7 +141,8 @@
 							<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
 						</div>
 					</div>
-					<div class="col-md-6">
+					<!-- Görselli Blog 2 -->
+					<div class="col-md-4">
 						<div class="blog-entry">
 							<a href="single.html" class="img-link">
 								<img src="/untree.co-blogy/images/img_2_sq.jpg" alt="Image" class="img-fluid">
@@ -158,42 +153,33 @@
 							<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
 						</div>
 					</div>
+					<!-- Görselli Blog 3 -->
+					<div class="col-md-4">
+						<div class="blog-entry">
+							<a href="single.html" class="img-link">
+								<img src="/untree.co-blogy/images/img_3_sq.jpg" alt="Image" class="img-fluid">
+							</a>
+							<span class="date">Apr. 14th, 2022</span>
+							<h2><a href="single.html">UK sees highest inflation in 30 years</a></h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
+							<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
-				<ul class="list-unstyled blog-entry-sm">
-					<li>
-						<span class="date">Apr. 14th, 2022</span>
-						<h3><a href="single.html">Don’t assume your user data in the cloud is safe</a></h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</li>
-
-					<li>
-						<span class="date">Apr. 14th, 2022</span>
-						<h3><a href="single.html">Meta unveils fees on metaverse sales</a></h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</li>
-
-					<li>
-						<span class="date">Apr. 14th, 2022</span>
-						<h3><a href="single.html">UK sees highest inflation in 30 years</a></h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</li>
-				</ul>
-			</div>
+			
+		
 		</div>
 	</div>
 </section>
+
 
 <section class="section">
 	<div class="container">
 
 		<div class="row mb-4">
 			<div class="col-sm-6">
-				<h2 class="posts-entry-title">Politics</h2>
+				<h2 class="posts-entry-title">Anime</h2>
 			</div>
 			<div class="col-sm-6 text-sm-end"><a href="category.html" class="read-more">View All</a></div>
 		</div>
@@ -207,7 +193,7 @@
 
 						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
 						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+							<figure class="author-figure mb-0 me-3 float-start"><img src="/untree.co-blogy/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
 							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
 							<span>&nbsp;-&nbsp; July 19, 2019</span>
 						</div>
@@ -217,155 +203,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_6_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_2.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_5_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_3.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_4_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_4.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_3_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_5.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_2_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_4.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_1_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_3.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_4_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_2.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_3_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_5.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
+	
 		</div>
 
 	</div>
