--- a/Blogizm.WebUI/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Blogizm.WebUI
 @using Blogizm.WebUI.Models
+@using Blogizm.Dtos.AboutBannerDtos
+@using Blogizm.Dtos.ClientDtos
+@using Blogizm.Dtos.ContactAddressDtos
+@using Blogizm.Dtos.ContactMessageDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
