--- a/Blogizm.WebUI/Views/Shared/Components/_ContactMessageComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_ContactMessageComponentPartial/Default.cshtml
@@ -16,7 +16,7 @@
 			</div>
 
 			<div class="col-12">
-				<input type="submit" value="Send Message" class="btn btn-primary">
+				<input type="submit" value="Mesaj Gönder" class="btn btn-primary">
 			</div>
 		</div>
 	</form>
