--- a/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeaderComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/AdminLayoutHeaderComponentPartial/Default.cshtml
@@ -10,23 +10,23 @@
             <div class="dropdown d-none d-sm-inline-block">
                 <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="mdi mdi-plus"></i> Create New
+                    <i class="mdi mdi-plus"></i> Oluştur
                     <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
                 </button>
                 <div class="dropdown-menu">
 
                     <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <a href="/Admin/AdminCategory/Index" class="dropdown-item notify-item">
                         Kategoriler
                     </a>
 
                     <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <a href="/Admin/AdminBlog/Index" class="dropdown-item notify-item">
                         Bloglar
                     </a>
 
                     <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <a href="/Admin/AdminAuthor/Index" class="dropdown-item notify-item">
                         Yazarlar
                     </a>
 
@@ -100,86 +100,15 @@
                 </div>
             </div>
 
-            <div class="dropdown d-inline-block">
-                <button type="button" class="btn header-item noti-icon"
-                        id="page-header-notifications-dropdown" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                    <i class="mdi mdi-bell"></i>
-                    <span class="badge badge-danger badge-pill">3</span>
-                </button>
-                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right p-0"
-                     aria-labelledby="page-header-notifications-dropdown">
-                    <div class="p-3">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                <h6 class="m-0"> Bildirimler </h6>
-                            </div>
-                            <div class="col-auto">
-                                <a href="#!" class="small">Tümünü Gör</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div data-simplebar style="max-height: 230px;">
-                        <a href="" class="text-reset notification-item">
-                            <div class="media">
-                                <img src="assets/images/users/avatar-2.jpg"
-                                     class="mr-3 rounded-circle avatar-xs" alt="user-pic">
-                                <div class="media-body">
-                                    <h6 class="mt-0 mb-1">Samuel Coverdale</h6>
-                                    <p class="font-size-12 mb-1">You have new follower on Instagram</p>
-                                    <p class="font-size-12 mb-0 text-muted">
-                                        <i class="mdi mdi-clock-outline"></i> 2 min ago
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="" class="text-reset notification-item">
-                            <div class="media">
-                                <div class="avatar-xs mr-3">
-                                    <span class="avatar-title bg-success rounded-circle">
-                                        <i class="mdi mdi-cloud-download-outline"></i>
-                                    </span>
-                                </div>
-                                <div class="media-body">
-                                    <h6 class="mt-0 mb-1">Download Available !</h6>
-                                    <p class="font-size-12 mb-1">
-                                        Latest version of admin is now available.
-                                        Please download here.
-                                    </p>
-                                    <p class="font-size-12 mb-0 text-muted">
-                                        <i class="mdi mdi-clock-outline"></i> 4 hours ago
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="" class="text-reset notification-item">
-                            <div class="media">
-                                <img src="assets/images/users/avatar-3.jpg"
-                                     class="mr-3 rounded-circle avatar-xs" alt="user-pic">
-                                <div class="media-body">
-                                    <h6 class="mt-0 mb-1">Victoria Mendis</h6>
-                                    <p class="font-size-12 mb-1">Just upgraded to premium account.</p>
-                                    <p class="font-size-12 mb-0 text-muted">
-                                        <i class="mdi mdi-clock-outline"></i> 1 day ago
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="p-2 border-top">
-                        <a class="btn btn-sm btn-light btn-block text-center" href="javascript:void(0)">
-                            <i class="mdi mdi-arrow-down-circle mr-1"></i> Load More..
-                        </a>
-                    </div>
-                </div>
-            </div>
+           <!--Notifications-->
+            @await Component.InvokeAsync("AdminLayoutNotificationsComponentPartial")
 
             <div class="dropdown d-inline-block ml-2">
                 <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img class="rounded-circle header-profile-user" src="/Admin/vertical/assets/images/users/avatar-3.jpg"
                          alt="Header Avatar">
-                    <span class="d-none d-sm-inline-block ml-1">Jamie D.</span>
+                    <span class="d-none d-sm-inline-block ml-1">Bora Tulan</span>
                     <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
@@ -187,26 +116,17 @@
                        href="javascript:void(0)">
                         <span>Gelen Kutusu</span>
                         <span>
-                            <span class="badge badge-pill badge-info">3</span>
+                            <span class="badge badge-pill badge-info">Okunmayan mesaj sayısı gelcek</span>
                         </span>
                     </a>
                     <a class="dropdown-item d-flex align-items-center justify-content-between"
                        href="javascript:void(0)">
                         <span>Hesabım</span>
-                        <span>
-                            <span class="badge badge-pill badge-warning">1</span>
-                        </span>
+                    
                     </a>
+                 
                     <a class="dropdown-item d-flex align-items-center justify-content-between"
-                       href="javascript:void(0)">
-                        Ayarlar
-                    </a>
-                    <a class="dropdown-item d-flex align-items-center justify-content-between"
-                       href="javascript:void(0)">
-                        <span>Hesabı Kilitle</span>
-                    </a>
-                    <a class="dropdown-item d-flex align-items-center justify-content-between"
-                       href="javascript:void(0)">
+                       href="/User/Logout">
                         <span>Çıkış Yap</span>
                     </a>
                 </div>
