Web UI Imported Blog Dtos

--- a/Blogizm.WebUI/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Blogizm.Dtos.ClientDtos
 @using Blogizm.Dtos.ContactAddressDtos
 @using Blogizm.Dtos.ContactMessageDtos
+@using Blogizm.Dtos.BlogDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
