--- a/Blogizm.WebUI/Areas/Admin/Views/AdminBlog/UpdateBlog.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/AdminBlog/UpdateBlog.cshtml
@@ -52,7 +52,11 @@
                                 <label for="exampleInputPassword1">Yazar</label>
                                 @Html.DropDownListFor(x => x.AuthorId, (List<SelectListItem>)ViewBag.AuthorValues, new { @class = "form-control" })
                             </div>
-                            <button type="submit" class="btn btn-primary waves-effect waves-light">Ekle</button>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Video URL</label>
+                                <input type="text" asp-for="VideoUrl" class="form-control" value="@Model.VideoUrl" autocomplete="off" />
+                            </div>
+                            <button type="submit" class="btn btn-primary waves-effect waves-light">Kaydet</button>
                         </form>
 
                     </div> <!-- end card-body-->
