--- a/Blogizm.WebUI/Views/Shared/Components/_UILayoutHeadComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_UILayoutHeadComponentPartial/Default.cshtml
@@ -33,4 +33,22 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 	<title>@TempData["Title"]</title>
+	<style>
+		.carousel-caption {
+			bottom: 20px;
+			left: 50%;
+			transform: translateX(-50%);
+		}
+
+		@@media (max-width: 768px) {
+			.carousel-caption
+
+		{
+			font-size: 1rem;
+			padding: 5px;
+			bottom:10%;
+		}
+
+		}
+	</style>
 </head>
