--- a/Blogizm.WebUI/Views/Default/Index.cshtml
+++ b/Blogizm.WebUI/Views/Default/Index.cshtml
@@ -4,116 +4,9 @@
     Layout = "~/Views/UILayout/Index.cshtml";
 }
 @await Component.InvokeAsync("_DefaultCarouselComponentPartial")
+@await Component.InvokeAsync("_DefaultTop3BlogSeriesComponentPartial")
+@await Component.InvokeAsync("_DefaultTop3GamesComponentPartial")
 
-<section class="section posts-entry">
-	<div class="container">
-		<div class="row mb-4">
-			<div class="col-sm-6">
-				<h2 class="posts-entry-title">Dizi</h2>
-			</div>
-			<div class="col-sm-6 text-sm-end">
-				<a href="category.html" class="read-more">View All</a>
-			</div>
-		</div>
-		<div class="row g-3">
-			<!-- Görselli Blog 1 -->
-			<div class="col-md-4">
-				<div class="blog-entry">
-					<a href="single.html" class="img-link">
-						<img src="/untree.co-blogy/images/img_1_sq.jpg" alt="Image" class="img-fluid">
-					</a>
-					<span class="date">Apr. 14th, 2022</span>
-					<h2><a href="single.html">Thought you loved Python? Wait until you meet Rust</a></h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-					<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
-				</div>
-			</div>
-			<!-- Görselli Blog 2 -->
-			<div class="col-md-4">
-				<div class="blog-entry">
-					<a href="single.html" class="img-link">
-						<img src="/untree.co-blogy/images/img_2_sq.jpg" alt="Image" class="img-fluid">
-					</a>
-					<span class="date">Apr. 14th, 2022</span>
-					<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-					<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
-				</div>
-			</div>
-			<!-- Görselli Blog 3 -->
-			<div class="col-md-4">
-				<div class="blog-entry">
-					<a href="single.html" class="img-link">
-						<img src="/untree.co-blogy/images/img_2_sq.jpg" alt="Image" class="img-fluid">
-					</a>
-					<span class="date">Apr. 14th, 2022</span>
-					<h2><a href="single.html">UK sees highest inflation in 30 years</a></h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-					<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-<section class="section posts-entry">
-	<div class="container">
-		<div class="row mb-4">
-			<div class="col-sm-6">
-				<h2 class="posts-entry-title">Oyun</h2>
-			</div>
-			<div class="col-sm-6 text-sm-end">
-				<a href="category.html" class="read-more">View All</a>
-			</div>
-		</div>
-		<div class="row g-3">
-			<!-- Görselli Bloglar -->
-			<div class="col-md-12 order-md-2">
-				<div class="row g-3">
-					<!-- Görselli Blog 1 -->
-					<div class="col-md-4">
-						<div class="blog-entry">
-							<a href="single.html" class="img-link">
-								<img src="/untree.co-blogy/images/img_1_sq.jpg" alt="Image" class="img-fluid">
-							</a>
-							<span class="date">Apr. 14th, 2022</span>
-							<h2><a href="single.html">Thought you loved Python? Wait until you meet Rust</a></h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-							<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
-						</div>
-					</div>
-					<!-- Görselli Blog 2 -->
-					<div class="col-md-4">
-						<div class="blog-entry">
-							<a href="single.html" class="img-link">
-								<img src="/untree.co-blogy/images/img_2_sq.jpg" alt="Image" class="img-fluid">
-							</a>
-							<span class="date">Apr. 14th, 2022</span>
-							<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-							<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
-						</div>
-					</div>
-					<!-- Görselli Blog 3 -->
-					<div class="col-md-4">
-						<div class="blog-entry">
-							<a href="single.html" class="img-link">
-								<img src="/untree.co-blogy/images/img_3_sq.jpg" alt="Image" class="img-fluid">
-							</a>
-							<span class="date">Apr. 14th, 2022</span>
-							<h2><a href="single.html">UK sees highest inflation in 30 years</a></h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, nobis ea quis inventore vel voluptas.</p>
-							<p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-		
-		</div>
-	</div>
-</section>
 
 
 <section class="section">
