--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultCarouselComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultCarouselComponentPartial/Default.cshtml
@@ -12,11 +12,13 @@
                     {
                         var data = Model[i];
                         <div class="carousel-item @(i == 0 ? "active" : "")">
-                            <img src="@data.CoverImageUrl" style="height:400px" class="d-block w-100" alt="@data.Title">
-                            <div class="carousel-caption d-none d-md-block">
+                            <img src="@data.CoverImageUrl" style="height: 500px; object-fit: contain;" class="d-block w-100" alt="@data.Title">
+                            <div class="carousel-caption d-block"
+                                 style="position: absolute; bottom: 10%; width: 100%; background-color: rgba(0, 0, 0, 0.6); color: white; padding: 10px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); font-size: 1.5rem; font-weight: bold;">
                                 <h5>@data.Title</h5>
                             </div>
                         </div>
+
                     }
                 </div>
 
