--- a/Blogizm.WebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<nav class="site-nav">
+﻿@model List<ResultCategoryDto>
+<nav class="site-nav">
 	<div class="container">
 		<div class="menu-bg-wrap">
 			<div class="site-navigation">
@@ -13,24 +14,13 @@
 							<li class="active"><a href="/Default/Index">Ana Sayfa</a></li>
 							<li><a href="/About/Index">Hakkımızda</a></li>
 							<li class="has-children">
-								<a href="category.html">Kategoriler</a>
-								<ul class="dropdown">
-									<li><a href="search-result.html">Search Result</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="single.html">Blog Single</a></li>
-									<li><a href="category.html">Category</a></li>
-									<li><a href="about.html">About</a></li>
-									<li><a href="contact.html">Contact Us</a></li>
-									<li><a href="#">Menu One</a></li>
-									<li><a href="#">Menu Two</a></li>
-									<li class="has-children">
-										<a href="#">Dropdown</a>
-										<ul class="dropdown">
-											<li><a href="#">Sub Menu One</a></li>
-											<li><a href="#">Sub Menu Two</a></li>
-											<li><a href="#">Sub Menu Three</a></li>
-										</ul>
-									</li>
+								<a href="javascript:void(0)">Kategoriler</a>
+								<ul class="dropdown"">
+									@foreach(var data in Model){
+										<li><a style="text-decoration:none" href="/Blog/Index/@data.CategoryId">@data.Name</a></li>
+									}
+									
+								
 								</ul>
 							</li>
 							<li><a href="/Contact/Index">İletişim</a></li>
