Category Dto Imported

--- a/Blogizm.WebUI/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using Blogizm.Dtos.ContactAddressDtos
 @using Blogizm.Dtos.ContactMessageDtos
 @using Blogizm.Dtos.BlogDtos
+@using Blogizm.Dtos.CategoryDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
