--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3GamesComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3GamesComponentPartial/Default.cshtml
@@ -39,7 +39,7 @@
 				<div class="col-md-4">
 					<div class="blog-entry">
 						<a href="single.html" class="img-link">
-							<img src="@data.CoverImageUrl" alt="@data.Title" class="img-fluid">
+							<img style="width:100%;height:250px" src="@data.CoverImageUrl" alt="@data.Title" class="img-fluid">
 						</a>
 						<br />
 						<h2><a href="single.html">@data.Title</a></h2>
